--- a/index.html
+++ b/index.html
@@ -12,11 +12,7 @@
 <body style="font-family: 'KoHo';">
     <div>
         <div id="header" class="container-fluid header">
-            <h1 class="title">
-                <span class="shortTitle">MW</span>
-                <span class="longTitle">Moussaab Waziz</span>
-            </h1>
-            <ul>
+            <ul id="listLinks">
                 <li><a href="#Intro">Acceuil</a></li>
                 <li><a href="#AboutME">A propos de moi</a></li>
                 <li><a href="#Gallerie">Gallerie</a></li>
